portaudio audiotoolbox adaptio: Set "Generic Low Latency Driver" in blacklist, added CMake flag to remove ksguid.lib dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,11 @@ IF(PA_USE_WDMKS_DEVICE_INFO)
 ADD_DEFINITIONS(-DPAWIN_USE_WDMKS_DEVICE_INFO)
 ENDIF(PA_USE_WDMKS_DEVICE_INFO)
 
+IF(PAWIN_WDMKS_NO_KSGUID_LIB)
+ADD_DEFINITIONS(-DPA_WDMKS_NO_KSGUID_LIB)
+ADD_DEFINITIONS(-DPAWIN_WDMKS_NO_KSGUID_LIB)
+ENDIF(PAWIN_WDMKS_NO_KSGUID_LIB)
+
 IF(PA_USE_DIRECTSOUNDFULLDUPLEXCREATE)
 ADD_DEFINITIONS(-DPAWIN_USE_DIRECTSOUNDFULLDUPLEXCREATE)
 ENDIF(PA_USE_DIRECTSOUNDFULLDUPLEXCREATE)
@@ -330,6 +335,7 @@ ENDIF(PA_USE_WDMKS)
 
 SET_TARGET_PROPERTIES(portaudio PROPERTIES OUTPUT_NAME portaudio_${TARGET_POSTFIX})
 SET_TARGET_PROPERTIES(portaudio_static PROPERTIES OUTPUT_NAME portaudio_static_${TARGET_POSTFIX})
+
 ENDIF(WIN32)
 
 OPTION(PA_BUILD_TESTS "Include test projects" OFF)
