Added installation of static portaudio library to main CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -391,6 +391,7 @@ ELSE()
     INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/portaudio-2.0.pc DESTINATION lib/pkgconfig)
     INSTALL(FILES ${PA_PUBLIC_INCLUDES} DESTINATION include)
     INSTALL(TARGETS portaudio DESTINATION lib)
+    INSTALL(TARGETS portaudio_static DESTINATION lib)
   ENDIF()
 ENDIF()
 
