Added option to set -fPIC compiler flag to portaudio CMake project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,15 @@ IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_LIST_DIR})
   ENDIF()
 ENDIF()
 
+IF (NOT WIN32)
+  OPTION(PA_GENERATE_POSITION_INDEPENDENT_CODE "Add the -fPIC flag to the compiler" ON)
+  IF(PA_GENERATE_POSITION_INDEPENDENT_CODE)
+    set(CMAKE_C_FLAGS         ${CMAKE_C_FLAGS}      " -fPIC " )
+    set(CMAKE_CXX_FLAGS       ${CMAKE_CXX_FLAGS}    " -fPIC " )
+    set(CMAKE_LINKER_FLAGS    ${CMAKE_LINKER_FLAGS} " -fPIC " )
+  ENDIF(PA_GENERATE_POSITION_INDEPENDENT_CODE)
+  ENDIF(NOT WIN32)
+
 SET(PA_PKGCONFIG_VERSION 19)
 
 # Most of the code from this point onwards is related to populating the
