Fixed -f PIC flag related linux cmake code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,9 @@ ENDIF()
 IF (NOT WIN32)
   OPTION(PA_GENERATE_POSITION_INDEPENDENT_CODE "Add the -fPIC flag to the compiler" ON)
   IF(PA_GENERATE_POSITION_INDEPENDENT_CODE)
-    set(CMAKE_C_FLAGS         ${CMAKE_C_FLAGS}      " -fPIC " )
-    set(CMAKE_CXX_FLAGS       ${CMAKE_CXX_FLAGS}    " -fPIC " )
-    set(CMAKE_LINKER_FLAGS    ${CMAKE_LINKER_FLAGS} " -fPIC " )
+    set(CMAKE_C_FLAGS         "${CMAKE_C_FLAGS}       -fPIC " )
+    set(CMAKE_CXX_FLAGS       "${CMAKE_CXX_FLAGS}     -fPIC " )
+    set(CMAKE_LINKER_FLAGS    "${CMAKE_LINKER_FLAGS}  -fPIC " )
   ENDIF(PA_GENERATE_POSITION_INDEPENDENT_CODE)
   ENDIF(NOT WIN32)
 
